--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,46 @@ body, html {
   height: auto; 
   border-bottom: 2px solid black; 
 }
+
+.comment {
+  display: flex;
+  align-items: flex-start;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+.comment img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.comment p {
+  margin: 0;
+}
+
+.comment .author {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.comment .body {
+  margin-bottom: 10px;
+}
+
+.comment .likes {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.comment .likes:hover {
+  background-color: #0056b3;
+}
