updated user page and other functionality

--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,19 @@ body, html {
 .comment .likes:hover {
   background-color: #0056b3;
 }
+
+.user-page {
+  margin-top: 3rem;
+  padding: 0;
+  width: 100%;
+  min-height: 100%;
+  box-sizing: border-box;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+}
+.user-page-image {
+  width: 20%;
+  height: auto; 
+  border-bottom: 2px solid black; 
+}
