--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body, html {
   /* margin: 0; */
   margin-top: 3rem;
-  padding: 0;
+  padding: 5%;
   width: 100%;
   min-height: 100%;
   box-sizing: border-box;
@@ -22,6 +22,10 @@ body, html {
   top: 0;
   left: 0;
   background-color: white;
+}
+
+.header h1 {
+  font-size:large;
 }
 
 .header h1 {
